<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">HX</string>
    
    <string name="login_button">Sign in</string>
    <string name="login_register">No Account? Register here</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="login_logo">Highexplosive logo</string>
    
    <string name="register_motivation">Motivation</string>
    <string name="register_role">Role</string>
    <string name="register_faction">Faction</string>
    <string name="register_mail">Mail</string>
    <string name="register_user">User</string>
    <string name="register_button">Register</string>
    <string name="register_ok">OK</string>
    <string name="register_cancel">Cancel</string>
    <string name="register_fill_all_fields">Please, fill all the fields</string>
    <string name="register_popup">Please, realize that Highexplosive is a full RPG. This means the registering process is manually made so it may take some hours to get a response from your Game Director. For more information, visit the official webpage of the project</string>
    <string name="register_comstar">Comstar</string>
    
    <string-array name="register_isroles_array">
        <item>Prince</item>
        <item>Duke</item>
        <item>Noble</item>
    </string-array>

    <string-array name="register_comroles_array">
        <item>Precentor</item>
        <item>Primus</item>
    </string-array>

    <string-array name="register_factions_array">
        <item>Comstar</item>
        <item>Davion</item>
        <item>Kurita</item>
        <item>Liao</item>
        <item>Marik</item>
        <item>Steiner</item>
    </string-array>
    
    <string name="main_menu_news">News</string>
    <string name="main_menu_war">War</string>
    <string name="main_menu_economy">Economy</string>
    <string name="main_menu_politics">Politics</string>
    <string name="main_menu_spionage">Espionage</string>
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_endofturn">End Turn</string>

    <string name="section_latest">Latest</string>
    <string name="section_house">House</string>
    <string name="section_messages">Messages</string>
    <string name="section_profile">Profile</string>
    
    <!-- War -->
    <string name="section_war_reports">War Reports</string>
    <string name="section_war_orders">War Orders</string>
    
    <string name="war_creation_regiment">Regiment</string>
    <string name="war_creation_sector">Where</string>
    <string name="war_creation_map">Map</string>
    <string name="war_creation_attitude">Attitude</string>
    <string name="war_creation_save">Save</string>

    <!-- Reports -->
    <string name="report_result">Result: </string>
    <string name="report_resume">Description: </string>
    <string name="report_back">Back</string>
    
    <!-- Declarations -->
    <string name="declaration_from">From: </string>
    <string name="declaration_published">Published in: </string>
    <string name="declaration_time">Time: </string>
    <string name="declaration_subject">Subject: </string>
    <string name="declaration_content">Content: </string>
    <string name="declaration_back">Back</string>
    
    <!-- Messages -->
    <string name="message_from">From: </string>
    <string name="message_to">To: </string>
    <string name="message_time">Time: </string>
    <string name="message_subject">Subject: </string>
    <string name="message_content">Content: </string>
    <string name="message_favorite">Fav</string>
    <string name="message_reply">Reply</string>
    <string name="message_delete">Delete</string>
    <string name="message_back">Back</string>
    <string name="message_discard">Discard</string>
    <string name="message_send">Send</string>
    
    <!-- Profile -->
    <string name="section_profile">Profile</string>
    <string name="profile_image">Profile image</string>
    <string name="profile_name">Name</string>
    <string name="profile_role">Role</string>
    <string name="profile_bio">Biography</string>
    <string name="profile_influence">Influence</string>
    <string name="profile_since">Registered since</string>
    <string name="profile_declarations">Declarations</string>
    <string name="profile_endturn">End Turn</string>
    
    <string name="action_bar_title">Highexplosive</string>
    
    <string name="dummy_text">Dummy text</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    
    <string-array name="dummy_spinner">
		<item>Array Item One</item>
		<item>Array Item Two</item>
		<item>Array Item Three</item>
	</string-array>
    
</resources>