<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:padding="5dip"
                    android:text="@string/profile_name"
                    android:textColor="#458B00" />

                <TextView
                    android:text="@string/dummy_text"
                    android:id="@+id/profileName"
                    android:padding="5dip" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dip"
                    android:text="@string/profile_role"
                    android:textColor="#458B00" />

                <TextView
                    android:text="@string/dummy_text"
                    android:id="@+id/profileRole"
                    android:padding="5dip" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dip"
                    android:text="@string/profile_influence"
                    android:textColor="#458B00" />

                <TextView
                    android:text="@string/dummy_text"
                    android:id="@+id/profileKarma"
                    android:padding="5dip" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/profile_image"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#458B00"
            android:text="@string/profile_bio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/profileBio"
            android:text="@string/dummy_text_long" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:padding="5dip"
                    android:text="@string/profile_since"
                    android:textColor="#458B00" />

                <TextView
                    android:text="@string/dummy_text"
                    android:id="@+id/profileSince"
                    android:padding="5dip" />

            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dip"
                    android:text="@string/profile_declarations"
                    android:textColor="#458B00" />

                <TextView
                    android:text="@string/dummy_text"
                    android:id="@+id/profileDeclarations"
                    android:padding="5dip" />
            </TableRow>

        </TableLayout>

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/profile_endturn" />
	    
    </LinearLayout>


</LinearLayout>