<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="800dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="right|center_vertical" >

        <Button
            android:id="@+id/cancelInOrderCreation"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/report_back" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:padding="5dip"
                android:text="@string/war_creation_regiment"
                android:textColor="#458B00" />

            <Spinner
                android:id="@+id/availableRegiments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_margin="5dp">

            <TextView
                android:padding="5dip"
                android:text="@string/war_creation_sector"
                android:textColor="#458B00" />

            <Spinner
                android:id="@+id/adjacentSectors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/warOrderCreationMap"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/war_creation_map" />
        </TableRow>

        <TableRow android:layout_margin="5dp">

            <TextView
                android:padding="5dip"
                android:text="@string/war_creation_attitude"
                android:textColor="#458B00" />

            <Spinner
                android:id="@+id/regimentOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/warOrderCreationSave"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/war_creation_save" />

</LinearLayout>