<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="800dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical" >
        
        <Button
            android:id="@+id/messageSendInCreate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/message_send" />

        <Button
            android:id="@+id/messageDiscardInCreate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/message_discard" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:padding="5dip"
                android:text="@string/message_to"
                android:textColor="#458B00" />

            <AutoCompleteTextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:id="@+id/messageToInCreate"
                android:padding="5dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="0.1"
                android:padding="5dip"
                android:text="@string/message_subject"
                android:textColor="#458B00" />

            <EditText
                android:id="@+id/messageSubjectInCreate"
                android:layout_weight="1"
                android:gravity="left"
                android:inputType="textShortMessage"
                android:padding="5dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="5dip"
                android:text="@string/message_content"
                android:textColor="#458B00" />
        </TableRow>

        <EditText
            android:id="@+id/messageContentInCreate"
            android:minLines="4"
            android:padding="5dip"
            android:inputType="textMultiLine"
            android:singleLine="false" />
    </TableLayout>

</LinearLayout>