<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="right|center_vertical" >

        <ToggleButton
            android:id="@+id/plusOneInDetail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textOff="+1"
            android:textOn="+1" />

        <Button
            android:id="@+id/backInDetail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/main_arrow_left" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:padding="5dip"
                android:text="@string/declaration_from"
                android:textColor="#458B00" />

            <TextView
                android:id="@+id/declarationFromInDetail"
                android:padding="5dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="5dip"
                android:text="@string/declaration_published"
                android:textColor="#458B00" />

            <TextView
                android:id="@+id/declarationPublished"
                android:padding="5dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="5dip"
                android:text="@string/declaration_time"
                android:textColor="#458B00" />

            <TextView
                android:id="@+id/declarationTime"
                android:padding="5dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="5dip"
                android:text="@string/declaration_subject"
                android:textColor="#458B00" />

            <TextView
                android:id="@+id/declarationSubjectInDetail"
                android:gravity="left"
                android:padding="5dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="5dip"
                android:text="@string/declaration_content"
                android:textColor="#458B00" />
        </TableRow>

        <TextView
            android:id="@+id/declarationBody"
            android:padding="5dip"
            android:singleLine="false" />
    </TableLayout>

</LinearLayout>