<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" android:contentDescription="@string/login_logo"/>

    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow android:layout_width="fill_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_user"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/loginUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textNoSuggestions"
                android:layout_weight="1"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow android:layout_width="fill_parent" android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:singleLine="true" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:gravity="right" >

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/login_register"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:textColor="@color/color_comstar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>